项目第二天（上）

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -373,9 +373,10 @@
                 <h3><a href="javascript:;">送长辈鲜花</a><span>赠·父母/恩师/长辈</span></h3>
             </div>
             <div class="bd">
-                <div class="bd-l">
+                <div class="bd-l first">
                     <div class="banner-box">
                         <a href="javascript:;"><img src="../images/older.jpg"></a>
+                        <div class="shadow"><a href="javascript:;">立即进入</a></div>
                     </div>
                     <a class="banner-link" href="javascript:;">爱情鲜花专区 &gt;&gt;</a>
                 </div>
@@ -462,9 +463,10 @@
                 <h3><a href="javascript:;">爱情鲜花</a><span>送·让你怦然心动的人</span></h3>
             </div>
             <div class="bd">
-                <div class="bd-l">
+                <div class="bd-l secend">
                     <div class="banner-box">
                         <a href="javascript:;"><img src="../images/banner_love.jpg"></a>
+                         <div class="shadow"><a href="javascript:;">立即进入</a></div>
                     </div>
                     <a class="banner-link" href="javascript:;">爱情鲜花专区 &gt;&gt;</a>
                 </div>
@@ -554,6 +556,7 @@
                 <div class="bd-l">
                     <div class="banner-box">
                         <a href="javascript:;"><img src="../images/life.jpg"></a>
+                         <div class="shadow"><a href="javascript:;">立即进入</a></div>
                     </div>
                     <a class="banner-link" href="javascript:;">永生花专区 &gt;&gt;</a>
                 </div>
@@ -644,6 +647,7 @@
                 <div class="bd-l">
                     <div class="banner-box">
                         <a href="javascript:;"><img src="../images/banner_cake.jpg"></a>
+                        <div class="shadow"><a href="javascript:;">立即进入</a></div>
                         <a href="javascript:;" class="bd-f">蛋糕专区 &gt;&gt;</a>
                     </div>
                     <div class="bd-foot">
@@ -772,6 +776,7 @@
                 <div class="bd-l">
                     <div class="banner-box">
                         <a href="javascript:;"><img src="../images/banner_gift.jpg"></a>
+                        <div class="shadow"><a href="javascript:;">立即进入</a></div>
                         <a href="javascript:;" class="bd-f">礼品专区 &gt;&gt;</a>
                     </div>
                     <div class="bd-foot">
@@ -870,8 +875,7 @@
                 </ul>
             </div>
         </div>
-        <!-- 楼层05   End -->
-        <!-- 面板 -->
+        <!-- evaluate -->
         <div class="panel-wrapper">
             <div class="gray-panel gray-l">
                 <div class="l-title">
@@ -896,33 +900,34 @@
                 </div>
                 <div class="gray-m-entry">
                     <dl class="content-res">
-                        <dt><a href="javascript:;"><img src="../images/5303003.jpg_80x87.jpg" class="img-res">ander*</a></dt>
+                        <dt><a href="javascript:;"><img src="../images/p_1.jpg" class="img-res">wujingj*</a></dt>
                         <dd>
                             <div class="info">
                                 <div class="racting"><span class="stars"></span></div>
-                                <p><a href="javascript:;">内容： 还是挺满意的，在预计的时间送达，花很好 蛋糕也很好，朋友很开心，不错 赞</a></p>
+                                <p><a href="javascript:;">内容：妈妈很喜欢，老人不缺钱，偶尔给他们点惊喜，才是他们需要的！
+                                    </a></p>
                             </div>
-                            <div class="date">2018-03-12</div>
+                            <div class="date">2018-05-11</div>
                         </dd>
                     </dl>
                     <dl class="content-res">
-                        <dt><a href="javascript:;"><img src="../images/5303003.jpg_80x87.jpg" class="img-res">ander*</a></dt>
+                        <dt><a href="javascript:;"><img src="../images/p_2.jpg" class="img-res">yiyis*</a></dt>
                         <dd>
                             <div class="info">
                                 <div class="racting"><span class="stars"></span></div>
-                                <p><a href="javascript:;">内容： 女友很喜欢，还是挺满意的</a></p>
+                                <p><a href="javascript:;">内容：也太快了，花和图一样，非常满意</a></p>
                             </div>
-                            <div class="date">2018-03-12</div>
+                            <div class="date">2018-05-11</div>
                         </dd>
                     </dl>
                     <dl class="content-res only-res">
-                        <dt><a href="javascript:;"><img src="../images/5303003.jpg_80x87.jpg" class="img-res">ander*</a></dt>
+                        <dt><a href="javascript:;"><img src="../images/p_3.jpg" class="img-res">35384*</a></dt>
                         <dd>
                             <div class="info">
                                 <div class="racting"><span class="stars"></span></div>
-                                <p><a href="javascript:;">内容： 还是挺满意的，在预计的时间送达，花很好 蛋糕也很好，朋友很开心，不错 赞</a></p>
+                                <p><a href="javascript:;">内容： 字写的不错喔</a></p>
                             </div>
-                            <div class="date">2018-03-12</div>
+                            <div class="date">2018-05-11</div>
                         </dd>
                     </dl>
                 </div>
@@ -935,30 +940,29 @@
                 <div class="r-comment">
                     <div class="gray-l-list">
                         <ul class="gray-list">
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
+                            <li><a href="javascript:;">12星座异地恋如何维持？送你一份</a></li>
+                            <li><a href="javascript:;">看十二生肖收花如何反应？一图看出</a></li>
+                            <li><a href="javascript:;">送花的含义，生活中怎么送花？</a></li>
+                            <li><a href="javascript:;">送女朋友鲜花，送花卡片写什么？</a></li>
+                            <li><a href="javascript:;">异地恋有大招，教你不分手！</a></li>
+                            <li><a href="javascript:;">512护士节是怎么来的？</a></li>
                         </ul>
                     </div>
                     <div class="r-comment-first"></div>
                     <div class="gray-l-list">
                         <ul class="gray-list">
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
-                            <li><a href="javascript:;">8年送99束，花礼网最神秘的用户</a></li>
+                            <li><a href="javascript:;">母亲节鲜花</a></li>
+                            <li><a href="javascript:;">鲜花枝数与其对应的含意</a></li>
+                            <li><a href="javascript:;">鲜花寓意 浪漫花语</a></li>
+                            <li><a href="javascript:;">通用送花祝福语-经典送花祝福语</a></li>
+                            <li><a href="javascript:;">送花的常识与技巧</a></li>
+                            <li><a href="javascript:;">女孩都喜欢别人送鲜花吗？</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- 面板 End -->
-        <!-- APP + 微信 -->
+        <!-- APP -->
         <div class="app-wx">
             <div class="app-download">
                 <img src="../images/app_download_qrcode.png" class="app-ewm">
@@ -979,8 +983,7 @@
                 </div>
             </div>
         </div>
-        <!-- APP + 微信End -->
-        <!-- 尾部 -->
+        <!-- footer -->
         <div class="footer-server">
             <ul class="footer-list">
                 <li><a href="javascript:;"><span class="hd1"></span>十三年品牌</a></li>
@@ -993,9 +996,143 @@
                 <li><a href="javascript:;"><span class="hd8"></span>200%退赔承诺</a></li>
             </ul>
         </div>
-        <!-- 尾部End -->
-    </div>    
+    </div> 
+        <div class="footer-nav">
+            <div class="footer-nav-cont">
+                <ul class="nav-cont-list">
+                    <li><a href="./index.html">首页</a></li>
+                    <li><a href="javascript:;">关于我们</a></li>
+                    <li><a href="javascript:;">媒体报道</a></li>
+                    <li><a href="javascript:;">联系方式</a></li>
+                    <li><a href="javascript:;">企业团购</a></li>
+                    <li><a href="javascript:;">花店加盟</a></li>
+                    <li><a href="javascript:;">友情链接</a></li>
+                    <li><a href="javascript:;">在线补款</a></li>
+                    <li class="last"><a href="javascript:;">为什么选择中国鲜花礼品网</a></li>
+                </ul>
+            </div>
+        </div>
+<!-- footer help -->
+    <div class="footer-help">
+        <div class="help-list">
+            <div class="help-cont r1">
+                <h4>客户服务</h4>
+                <ul>
+                    <li class="r1-list">
+                        <ul>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                        </ul>
+                    </li>
+                    <li class="r1-list">
+                        <ul>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="help-cont r2">
+                <h4>热门资讯</h4>
+                <ul class="r2-list">
+                    <li><a href="javascript:;">中国鲜花礼品网购教程</a></li>
+                    <li><a href="javascript:;">鲜花网能配送到那些城市</a></li>
+                    <li><a href="javascript:;">中国鲜花礼品网购教程</a></li>
+                    <li><a href="javascript:;">鲜花网能配送到那些城市</a></li>
+                    <li><a href="javascript:;">中国鲜花礼品网购教程</a></li>
+                </ul>
+            </div>
+            <div class="help-cont r2 r3">
+                <h4>同城鲜花专区</h4>
+                <ul>
+                    <li class="r1-list">
+                        <ul>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                        </ul>
+                    </li>
+                    <li class="r1-list">
+                        <ul>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">各种说明</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="help-cont r2">
+                <h4>练习我们</h4>
+                <ul class="r2-list">
+                    <li><a href="javascript:;">中国鲜花礼品网购教程</a></li>
+                    <li><a href="javascript:;">在线客服</a></li>
+                    <li><a href="javascript:;">7X24小时在线订购</a></li>
+                    <li><a href="javascript:;">客服工作时间： 8:30-21:00</a></li>
+                    <li><a href="javascript:;">email：##￥@%@%……</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+<!-- common footer -->
+    <footer>
+        <div class="lasting">
+            <div class="auth">
+                <a href="javascript:;"><img src="../images/cxwz.png" class="auth-h"></a>
+                <a href="javascript:;"><img src="../images/cxwz.gif"></a>
+                <a href="javascript:;"><img src="../images/smyz.gif"></a>
+                <a href="javascript:;"><img src="../images/slogan.png"></a>
+                <a href="javascript:;"><img src="../images/zfb.gif"></a>
+                <a href="javascript:;"><img src="../images/100.jpg"></a>
+                <a href="javascript:;"><img src="../images/bico1.jpg"></a>
+                <a href="javascript:;"><img src="../images/bico4.jpg"></a>
+                <a href="javascript:;"><img src="../images/bico3.jpg"></a>
+            </div>
+            <p><a href="javascript:;" title="中国花卉协会会员">中国花卉协会会员</a> <a href="javascript:;">中国电子商务协会会员</a> ICP经营许可证：<a href="javascript:;">粤B2-20050744</a> <b>|</b> <a href="javascript:;">粤ICP备09171662号</a> <span class="ico-beian"></span>粤公网安备44030502000373号 Copyright © 2005-2018</p>
+            <p>花礼网 （中国鲜花礼品网） <a href="javascript:;">www.hua.com</a><span> 深圳市百易信息技术有限公司</span> 中国鲜花网领先品牌，鲜花速递专家！</p>
+        </div>
+    </footer>
+<!-- friendship -->
+    <div class="footer-link">
+        <ul class="link-list">
+            <h6>友链</h6>
+            <li><a href="javascript:;">中华取名网</a></li>
+            <li><a href="javascript:;">深圳房产网</a></li>
+            <li><a href="javascript:;">卷皮网</a></li>
+            <li><a href="javascript:;">腕表</a></li>
+            <li><a href="javascript:;">宝贝婚团网</a></li>
+            <li><a href="javascript:;">苗木</a></li>
+            <li><a href="javascript:;">佐卡伊珠宝网</a></li>
+            <li><a href="javascript:;">钻石婚戒定制</a></li>
+            <li><a href="javascript:;">杂志</a></li>
+            <li><a href="javascript:;">中国青少年艺术教育网</a></li>
+            <li><a href="javascript:;">装修网</a></li>
+            <li><a href="javascript:;">淘狗网</a></li>
+            <li><a href="javascript:;">礼无忧网</a></li>
+            <li><a href="javascript:;">宠物狗</a></li>
+            <li><a href="javascript:;">新友网</a></li>
+            <li><a href="javascript:;">礼物网</a></li>
+            <li><a href="javascript:;">装修</a></li>
+            <li><a href="javascript:;">新三板</a></li>
+            <li><a href="javascript:;">商标注册</a></li>
+            <li><a href="javascript:;" class="link-end">眼镜店</a></li>
+        </ul>
+    </div>   
 </body>
 </html>
 <script src="../../dist/js/jquery-1.10.1.min.js"></script>
 <script src="../../dist/js/index.js"></script>
+<!-- <script >
+
+</script> -->
