--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,7 +41,7 @@
             </ul>
             <ul class="site-nav-r">
                 <li class="menu">
-                    <a href="./login.html" target="_blank">你好，请登录</a><a href="./register.html" target="_blank">注册</a>
+                    <a href="./login.html" target="_blank">你好，请登录</a><a href="login.html" target="_blank">注册</a>
                 </li>
                 <li class="menu">|</li>
                 <li class="menu">
@@ -92,10 +92,11 @@
             <div class="search">
                 <form name="i-search" method="post">
                     <div class="input-group">
-                        <input type="text" placeholder="商品关键词" class="input-group-cont">
+                        <input type="text" placeholder="" class="input-group-cont" id="placehold">
                         <span class="input-group-but">
                             <button class="btn">搜索</button>
                         </span>
+                        <ul id="ss_uo"></ul>
                     </div>
                 </form>
                 <span class="help-block">
@@ -373,7 +374,7 @@
                 <h3><a href="javascript:;">送长辈鲜花</a><span>赠·父母/恩师/长辈</span></h3>
             </div>
             <div class="bd">
-                <div class="bd-l first">
+                <div class="bd-l">
                     <div class="banner-box">
                         <a href="javascript:;"><img src="../images/older.jpg"></a>
                         <div class="shadow"><a href="javascript:;">立即进入</a></div>
@@ -463,7 +464,7 @@
                 <h3><a href="javascript:;">爱情鲜花</a><span>送·让你怦然心动的人</span></h3>
             </div>
             <div class="bd">
-                <div class="bd-l secend">
+                <div class="bd-l">
                     <div class="banner-box">
                         <a href="javascript:;"><img src="../images/banner_love.jpg"></a>
                          <div class="shadow"><a href="javascript:;">立即进入</a></div>
@@ -1020,20 +1021,20 @@
                 <ul>
                     <li class="r1-list">
                         <ul>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">支付说明</a></li>
+                            <li><a href="javascript:;">服务说明</a></li>
+                            <li><a href="javascript:;">境外说明</a></li>
+                            <li><a href="javascript:;">配送说明</a></li>
+                            <li><a href="javascript:;">取消订单</a></li>
                         </ul>
                     </li>
                     <li class="r1-list">
                         <ul>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">订单查询</a></li>
+                            <li><a href="javascript:;">补交贷款</a></li>
+                            <li><a href="javascript:;">安全条款</a></li>
+                            <li><a href="javascript:;">配送说明</a></li>
+                            <li><a href="javascript:;">隐私条款</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -1041,11 +1042,11 @@
             <div class="help-cont r2">
                 <h4>热门资讯</h4>
                 <ul class="r2-list">
-                    <li><a href="javascript:;">中国鲜花礼品网购教程</a></li>
-                    <li><a href="javascript:;">鲜花网能配送到那些城市</a></li>
-                    <li><a href="javascript:;">中国鲜花礼品网购教程</a></li>
-                    <li><a href="javascript:;">鲜花网能配送到那些城市</a></li>
-                    <li><a href="javascript:;">中国鲜花礼品网购教程</a></li>
+                    <li><a href="javascript:;">中国鲜花礼品网购物流程</a></li>
+                    <li><a href="javascript:;">中国鲜花礼品网订购演示</a></li>
+                    <li><a href="javascript:;">鲜花网能配送哪些城市？</a></li>
+                    <li><a href="javascript:;">鲜花售后服务是怎么样的？</a></li>
+                    <li><a href="javascript:;">我应该提前多久预订鲜花？</a></li>
                 </ul>
             </div>
             <div class="help-cont r2 r3">
@@ -1053,34 +1054,34 @@
                 <ul>
                     <li class="r1-list">
                         <ul>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">深圳鲜花</a></li>
+                            <li><a href="javascript:;">上海鲜花</a></li>
+                            <li><a href="javascript:;">天津鲜花</a></li>
+                            <li><a href="javascript:;">成都鲜花</a></li>
+                            <li><a href="javascript:;">武汉鲜花</a></li>
+                            <li><a href="javascript:;">厦门鲜花</a></li>
                         </ul>
                     </li>
                     <li class="r1-list">
                         <ul>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
-                            <li><a href="javascript:;">各种说明</a></li>
+                            <li><a href="javascript:;">北京鲜花</a></li>
+                            <li><a href="javascript:;">广州鲜花</a></li>
+                            <li><a href="javascript:;">重庆鲜花</a></li>
+                            <li><a href="javascript:;">西安鲜花</a></li>
+                            <li><a href="javascript:;">南京鲜花</a></li>
+                            <li><a href="javascript:;">更多城市</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
             <div class="help-cont r2">
-                <h4>练习我们</h4>
+                <h4>联系我们</h4>
                 <ul class="r2-list">
-                    <li><a href="javascript:;">中国鲜花礼品网购教程</a></li>
+                    <li><a href="javascript:;">全国订购热线:400-889-8188(免长途费)</a></li>
                     <li><a href="javascript:;">在线客服</a></li>
                     <li><a href="javascript:;">7X24小时在线订购</a></li>
                     <li><a href="javascript:;">客服工作时间： 8:30-21:00</a></li>
-                    <li><a href="javascript:;">email：##￥@%@%……</a></li>
+                    <li><a href="javascript:;">E-mail：kefu@hua.com</a></li>
                 </ul>
             </div>
         </div>
@@ -1133,6 +1134,6 @@
 </html>
 <script src="../../dist/js/jquery-1.10.1.min.js"></script>
 <script src="../../dist/js/index.js"></script>
-<!-- <script >
-
+<!-- <script>
+    search(placehold);
 </script> -->
