项目第三天（上）

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1129,10 +1129,33 @@
             <li><a href="javascript:;">商标注册</a></li>
             <li><a href="javascript:;" class="link-end">眼镜店</a></li>
         </ul>
-    </div>   
+    </div> 
+    <!-- 侧边固定栏 -->
+    <div class="right-fixed">
+        <div class="fix">
+            <div class="fix-up">
+                <ul>
+                    <li><a href="javascript:;" class="my_qlink"><span class="qlink_bg"></span></a></li>
+                    <li class="shopCart"><a href="javascript:;"><span class="shop-u"></span><span class="shop_letter">购物车</span><span class="shuop-n">0</span></a></li>
+                    <li><a href="javascript:;"><span class="Collection"></span></a></li>
+                    <li><a href="javascript:;"><span class="Lately"></span></a></li>
+                    <li><a href="javascript:;"><span class="f_iphone"></span></a></li>
+                    <li><a href="javascript:;"><span class="Customer_service"></span></a></li>
+                </ul>
+            </div>
+            <div class="fix-down">
+                <ul>
+                    <li><a href="javascript:;"><span class="f-ewm"></span></a></li>
+                    <li><a href="javascript:;"><span class="feedback"></span></a></li>
+                    <li id="scroll_top"><a href="javascript:;"><span class="f-top"></span></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>  
 </body>
 </html>
 <script src="../../dist/js/jquery-1.10.1.min.js"></script>
+<script src="../../dist/js/common.js"></script>
 <script src="../../dist/js/index.js"></script>
 <!-- <script>
     search(placehold);
