--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>列表页</title>
+    <title>详情页</title>
     <link rel="stylesheet" href="../../dist/css/index.css">
 </head>
 
@@ -263,111 +262,103 @@
             </ul>
         </div>
     </div>
+<!-- 鲜花详情 -->
+<div class="section_cont">
+    <!-- 内容导航 -->
+    <div class="section_one">
+        <a href="./index.html" style="font-weight: 600;">首页</a> >
+        <a href="javascript:;">鲜花</a> >
+        <p>阳光心情</p>
+    </div>
+    <div class="section_product">
+        <div class="product_l">
+            <div class="large_img">
+                <img src="../images/9010811.jpg" class="pt_active">
+                <img src="../images/201505221805557968.jpg" style="position: absolute; top: 0; left: 0">
+                <div class="btn_left"><span> < </span></div>
+                <div class="btn_right"><span> > </span></div>
+            </div>
+            <div class="product_small_img">
+                <p class="active"><img src="../images/9010811.jpg_80x87.jpg"></p>
+                <p><img src="../images/201505221805557968.jpg_80x87.jpg"></p>
+            </div>
+        </div>
+        <div class="product_r">
+            <h3>阳光心情<span>-----</span>10枝多头百合</h3>
+            <div class="attribute">
+                <dl>
+                    <dt>类别：</dt>
+                    <dd>鲜花编号：9010811</dd>
+                </dl>
+                <dl>
+                    <dt>材料：</dt>
+                    <dd>10枝多头黄百合,黄莺适量搭配</dd>
+                </dl>
+                <dl>
+                    <dt>包装：</dt>
+                    <dd>蓝色平面纸圆形包装，拉菲草束扎</dd>
+                </dl>
+                <dl>
+                    <dt>花语：</dt>
+                    <dd>想着 我们曾一起跨过海边，<br/>想着 我们曾一起晒太阳。<br/>想着 我们曾一起坐着小火车,<br/>想着 我们曾手牵手走过曾经。<br/>此刻，我的心情，一如阳光般温暖！</dd>
+                </dl>
+                <dl>
+                    <dt>附送：</dt>
+                    <dd>下单填写留言，即免费赠送精美贺卡！</dd>
+                </dl>
+                <dl>
+                    <dt>配送</dt>
+                    <dd>全国大中城市</dd>
+                </dl>
+                <dl>
+                    <dt style="line-height: 25px;">配送至</dt>
+                    <dd style="line-height: 25px;">鲜花编号：9010811</dd>
+                </dl>
+                <dl>
+                    <dt>说明：</dt>
+                    <dd><span class="text_explain">特别花材,大城市请提前一天订购,中小城市请订购前咨询</span></dd>
+                </dl>
+            </div>
+            <div class="product_price">
+                <div class="price_original">市场价：￥435</div>
+                <div class="price_sell">花礼价：<strong><span class="price_sign_A">¥</span><span class="price_num_A">339</span></strong></div>
+            </div>
+            <div class="product_appzx">
+                <ul>
+                    <li>促销信息 ：<img src="../images/appzx_01.png"><strong><span class="price_sign_A">¥</span><span class="price_num_A">339</span></strong></li>
+                    <li class="hidden">
+                        <p><span class="app_dropdown"></span>去APP购买<img src="src/images/detail/xxjt.png" class="app_img"></p>
+                        <div class="app_ewm">
+                            <img src="../images/app_qrcode.jpg" style="width: 120px; height: 120px;" class="ewm_app_dis">
+                            新人专享100元大礼包
+                        </div>
+                    </li>
+                    <li class="hidden">
+                        <p><span class="app_dropdown"></span>去微信购买<img src="src/images/detail/xxjt.png" class="app_img"></p>
+                        <div class="app_ewm">
+                            <img src="../images/app_qrcode.jpg" style="width: 120px; height: 120px;" class="ewm_app_dis">
+                            新人专享100元大礼包
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="btn_buy">
+                <a href="javascript:;" class="im_buy"><span class="im"></span>立即购买</a>
+                <a href="javascript:;" class="future_buy"><span class="future"></span>收 藏</a>
+            </div>
+        </div>
+    </div>
+</div>
 
-<!-- 内容栏 -->
-	<div class="section_cont">
-        <!-- 内容导航 -->
-		<div class="section_one">
-			<a href="./index.html">首页</a> >
-			<a href="javascript:;">鲜花</a> >
-            <p>慰问探病鲜花</p>
-		</div>
-        <!-- 鲜花介绍 -->
-		<div class="section_two">
-			<div class="section_two_left">
-				<div class="section_two_l">
-					<div class="left_one">
-						<div class="one_img"><span></span><b style="color: #ff6a00;">用途</b></div>
-						<ul class="left_one_list">
-							<li><a href="javascript:;">爱情鲜花</a></li>
-							<li><a href="javascript:;">友情鲜花</a></li>
-							<li><a href="javascript:;">生日鲜花</a></li>
-							<li><a href="javascript:;">问候鲜花</a></li>
-							<li><a href="javascript:;">回报鲜花</a></li>
-							<li><a href="javascript:;">探病鲜花</a></li>
-							<li><a href="javascript:;">道歉鲜花</a></li>
-							<li><a href="javascript:;">婚庆鲜花</a></li>
-							<li><a href="javascript:;">祝贺鲜花</a></li>
-							<li><a href="javascript:;">哀思鲜花</a></li>
-							<li><a href="javascript:;">商务鲜花</a></li>
-							<li><a href="javascript:;">开业鲜花</a></li>
-							<li><a href="javascript:;">自选鲜花</a></li>
-							<li><a href="javascript:;">港澳台送花</a></li>
-						</ul>
-					</div>
-					<div class="left_one">
-						<div class="one_img two_bg"><span></span><b style="color: #ff6a00;">花材</b></div>
-						<ul class="left_one_list">
-							<li><a href="javascript:;">玫瑰花</a></li>
-							<li><a href="javascript:;">红玫瑰</a></li>
-							<li><a href="javascript:;">粉玫瑰</a></li>
-							<li><a href="javascript:;">白玫瑰</a></li>
-							<li><a href="javascript:;">紫玫瑰</a></li>
-							<li><a href="javascript:;">蓝玫瑰</a></li>
-							<li><a href="javascript:;">香槟玫瑰</a></li>
-							<li><a href="javascript:;">黄玫瑰</a></li>
-							<li><a href="javascript:;">康乃馨</a></li>
-							<li><a href="javascript:;">百合</a></li>
-							<li><a href="javascript:;">扶郎</a></li>
-							<li><a href="javascript:;">向日葵</a></li>
-							<li><a href="javascript:;">郁金香</a></li>
-							<li><a href="javascript:;">马蹄莲</a></li>
-						</ul>
-					</div>
-					<div class="left_one">
-						<div class="one_img three_bg"><span></span><b style="color: #ff6a00;">颜色</b></div>
-						<ul class="left_one_list three_color">
-							<li><a href="javascript:;"><span class="span1"></span>红色</a></li>
-							<li><a href="javascript:;"><span class="span2"></span>粉色</a></li>
-							<li><a href="javascript:;"><span class="span3"></span>香槟</a></li>
-							<li><a href="javascript:;"><span class="span4"></span>黄色</a></li>
-							<li><a href="javascript:;"><span class="span5"></span>白色</a></li>
-							<li><a href="javascript:;"><span class="span6"></span>紫色</a></li>
-							<li><a href="javascript:;"><span class="span7"></span>蓝色footer_list</a></li>
-						</ul>
-					</div>
-					<div class="left_one">
-						<div class="one_img four_bg"><span></span><b style="color: #ff6a00;">类别</b></div>
-						<ul class="left_one_list">
-							<li><a href="javascript:;">花束</a></li>
-							<li><a href="javascript:;">瓶花</a></li>
-							<li><a href="javascript:;">开业花篮</a></li>
-							<li><a href="javascript:;">各种花篮</a></li>
-							<li><a href="javascript:;">只卖篮子</a></li>
-							<li><a href="javascript:;">没花，滚</a></li>
-							<li><a href="javascript:;">各种花</a></li>
-						</ul>
-					</div>
-					<div class="left_one">
-						<div class="one_img five_bg"><span></span><b style="color: #ff6a00;">价格</b></div>
-						<ul class="left_one_list">
-							<li><a href="javascript:;">特价鲜花</a></li>
-							<li><a href="javascript:;">150以下</a></li>
-							<li><a href="javascript:;">有女友的</a></li>
-							<li><a href="javascript:;">单身狗的</a></li>
-							<li><a href="javascript:;">1500以上</a></li>
-							<li><a href="javascript:;">氪金</a></li>
-							<li><a href="javascript:;">赠送</a></li>
-						</ul>
-					</div>
-					<div class="left_one left_last">
-						<div class="one_img six_bg"><span></span><b style="color: #ff6a00;">支数</b></div>
-						<ul class="left_one_list">
-							<li><a href="javascript:;">9枝</a></li>
-							<li><a href="javascript:;">99枝</a></li>
-							<li><a href="javascript:;">999枝</a></li>
-							<li><a href="javascript:;">9999枝</a></li>
-							<li><a href="javascript:;">99999枝</a></li>
-							<li><a href="javascript:;">69枝</a></li>
-							<li><a href="javascript:;">11111枝</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="left_two">
-					<div class="two_hd">
-						<h3>热销鲜花推荐</h3>
-					</div>
-					<div class="two_cont"></div>
+
+<!-- 左侧鲜花介绍-->
+        <div class="section_two">
+            <div class="section_two_left">
+                <div class="left_two">
+                    <div class="two_hd">
+                        <h3>热销鲜花推荐</h3>
+                    </div>
+                    <div class="two_cont"></div>
                 </div>
                 <div class="left_two left_three">
                     <div class="two_hd">
@@ -428,150 +419,13 @@
                         </div>
                     </div>
                 </div>
-			</div>
-			<div class="section_two_right">
-                <div class="right_hd_img">
-                    <img src="../images/love_bg.jpg" alt="">
-                </div>
-                <div class="right_nav">
-                    <ul>
-                        <li class="padd"><a href="javascript:;" class="r_color">综合</a></li>
-                        <li class="padd"><a href="javascript:;">销量<em></em></a></li>
-                        <li class="padd"><a href="javascript:;">价格<em></em></a></li>
-                        <li class="padd"><a href="javascript:;">最新<em></em></a></li>
-                    </ul>
-                    <ul class="right_nav_r">
-                        <li class="tatle_page"><span>1</span>/1</li><li class="nav_r_num"><</li><li class="nav_r_num">></li>
-                    </ul>
-                </div>
-                <div class="right_gift">
-                    <ul class="list">
-                        
-
-
-                    </ul>
-                </div>
-                <div class="right_footer">
-                    <p>1-1 / 共16件商品</p>
-                    <div id="pager"></div>
-
-                </div>
-            </div>
-		</div>
-        <!-- 帮助列表 -->
-        <div class="kownledge">
-            <p>探病慰问鲜花&鲜花礼仪</p>
-            <div class="kown_body">
-                <ul class="body_list">
-                    <li><a href="javascript:;">爱情鲜花：鲜花，守护在爱恋时光里</a></li>
-                    <li><a href="javascript:;">爱情“保鲜”战：结婚纪念日送花</a></li>
-                    <li><a href="javascript:;">这些花，比爱情更温暖</a></li>
-                    <li><a href="javascript:;">妻子生日送多少朵玫瑰最好？</a></li>
-                    <li><a href="javascript:;">结婚后的情人节送什么？</a></li>
-                </ul>
-                <ul class="body_list body_list2">
-                    <li><a href="javascript:;">恋爱的那点事儿，怎样谈恋爱？</a></li>
-                    <li><a href="javascript:;">老婆过生日送什么花？</a></li>
-                    <li><a href="javascript:;">向女朋友求婚送什么花？</a></li>
-                    <li><a href="javascript:;">惹女友生气了怎么办？</a></li>
-                    <li><a href="javascript:;">送花的含义：相爱纪念日送什么花？</a></li>
-                </ul>
-                <ul class="body_list body_list2">
-                    <li><a href="javascript:;">解读爱情：十二星座之守护花</a></li>
-                    <li><a href="javascript:;">经典送花祝福语</a></li>
-                    <li><a href="javascript:;">送花支数代表的含义</a></li>
-                    <li><a href="javascript:;">鲜花与生日</a></li>
-                    <li><a href="javascript:;">鲜花与星座</a></li>
-                </ul>
             </div>
         </div>
-	</div>
 
-    <!-- 尾部导航 -->
-        <div class="footer-nav">
-            <div class="footer-nav-cont">
-                <ul class="nav-cont-list">
-                    <li><a href="./index.html">首页</a></li>
-                    <li><a href="javascript:;">关于我们</a></li>
-                    <li><a href="javascript:;">媒体报道</a></li>
-                    <li><a href="javascript:;">联系方式</a></li>
-                    <li><a href="javascript:;">企业团购</a></li>
-                    <li><a href="javascript:;">花店加盟</a></li>
-                    <li><a href="javascript:;">友情链接</a></li>
-                    <li><a href="javascript:;">在线补款</a></li>
-                    <li class="last"><a href="javascript:;">为什么选择中国鲜花礼品网</a></li>
-                </ul>
-            </div>
-        </div>
-<!-- common footer -->
-    <footer>
-        <div class="lasting">
-            <div class="auth">
-                <a href="javascript:;"><img src="../images/cxwz.png" class="auth-h"></a>
-                <a href="javascript:;"><img src="../images/cxwz.gif"></a>
-                <a href="javascript:;"><img src="../images/smyz.gif"></a>
-                <a href="javascript:;"><img src="../images/slogan.png"></a>
-                <a href="javascript:;"><img src="../images/zfb.gif"></a>
-                <a href="javascript:;"><img src="../images/100.jpg"></a>
-                <a href="javascript:;"><img src="../images/bico1.jpg"></a>
-                <a href="javascript:;"><img src="../images/bico4.jpg"></a>
-                <a href="javascript:;"><img src="../images/bico3.jpg"></a>
-            </div>
-            <p><a href="javascript:;" title="中国花卉协会会员">中国花卉协会会员</a> <a href="javascript:;">中国电子商务协会会员</a> ICP经营许可证：<a href="javascript:;">粤B2-20050744</a> <b>|</b> <a href="javascript:;">粤ICP备09171662号</a> <span class="ico-beian"></span>粤公网安备44030502000373号 Copyright © 2005-2018</p>
-            <p>花礼网 （中国鲜花礼品网） <a href="javascript:;">www.hua.com</a><span> 深圳市百易信息技术有限公司</span> 中国鲜花网领先品牌，鲜花速递专家！</p>
-        </div>
-    </footer>
-<!-- friendship -->
-    <div class="footer-link">
-        <ul class="link-list">
-            <h6>友链</h6>
-            <li><a href="javascript:;">中华取名网</a></li>
-            <li><a href="javascript:;">深圳房产网</a></li>
-            <li><a href="javascript:;">卷皮网</a></li>
-            <li><a href="javascript:;">腕表</a></li>
-            <li><a href="javascript:;">宝贝婚团网</a></li>
-            <li><a href="javascript:;">苗木</a></li>
-            <li><a href="javascript:;">佐卡伊珠宝网</a></li>
-            <li><a href="javascript:;">钻石婚戒定制</a></li>
-            <li><a href="javascript:;">杂志</a></li>
-            <li><a href="javascript:;">中国青少年艺术教育网</a></li>
-            <li><a href="javascript:;">装修网</a></li>
-            <li><a href="javascript:;">淘狗网</a></li>
-            <li><a href="javascript:;">礼无忧网</a></li>
-            <li><a href="javascript:;">宠物狗</a></li>
-            <li><a href="javascript:;">新友网</a></li>
-            <li><a href="javascript:;">礼物网</a></li>
-            <li><a href="javascript:;">装修</a></li>
-            <li><a href="javascript:;">新三板</a></li>
-            <li><a href="javascript:;">商标注册</a></li>
-            <li><a href="javascript:;" class="link-end">眼镜店</a></li>
-        </ul>
-    </div> 
-    <!-- 侧边固定栏 -->
-    <div class="right-fixed">
-        <div class="fix">
-            <div class="fix-up">
-                <ul>
-                    <li><a href="javascript:;" class="my_qlink"><span class="qlink_bg"></span></a></li>
-                    <li class="shopCart"><a href="javascript:;"><span class="shop-u"></span><span class="shop_letter">购物车</span><span class="shuop-n">0</span></a></li>
-                    <li><a href="javascript:;"><span class="Collection"></span></a></li>
-                    <li><a href="javascript:;"><span class="Lately"></span></a></li>
-                    <li><a href="javascript:;"><span class="f_iphone"></span></a></li>
-                    <li><a href="javascript:;"><span class="Customer_service"></span></a></li>
-                </ul>
-            </div>
-            <div class="fix-down">
-                <ul>
-                    <li><a href="javascript:;"><span class="f-ewm"></span></a></li>
-                    <li><a href="javascript:;"><span class="feedback"></span></a></li>
-                    <li id="scroll_top"><a href="javascript:;"><span class="f-top"></span></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>  
-    <script src="../../dist/js/jquery-1.10.1.min.js"></script>
-    <script src="../../dist/js/common.js"></script>
-    <script src="../../dist/js/list.js"></script>
+<body>
+    
 </body>
-
 </html>
+   <script src="../../dist/js/jquery-1.10.1.min.js"></script>
+   <script src="../../dist/js/common.js"></script>
+   <script src="../../dist/js/cart.js"></script>
