项目第四天（上）

--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -224,7 +224,6 @@
                         </ul>
                     </div>
                     <div class="cate-cake">
-                        <!-- <span class="cate-ysh-r-btn">></span> -->
                         <a href="javascript:;" class="gifts_toys_plant_f">礼品</a> /
                         <a href="javascript:;" class="plant-c">公仔</a> /
                         <a href="javascript:;" class="plant-c">绿植</a>
@@ -270,84 +269,8 @@
         <a href="javascript:;">鲜花</a> >
         <p>阳光心情</p>
     </div>
-    <div class="section_product">
-        <div class="product_l">
-            <div class="large_img">
-                <img src="../images/9010811.jpg" class="pt_active">
-                <img src="../images/201505221805557968.jpg" style="position: absolute; top: 0; left: 0">
-                <div class="btn_left"><span> < </span></div>
-                <div class="btn_right"><span> > </span></div>
-            </div>
-            <div class="product_small_img">
-                <p class="active"><img src="../images/9010811.jpg_80x87.jpg"></p>
-                <p><img src="../images/201505221805557968.jpg_80x87.jpg"></p>
-            </div>
-        </div>
-        <div class="product_r">
-            <h3>阳光心情<span>-----</span>10枝多头百合</h3>
-            <div class="attribute">
-                <dl>
-                    <dt>类别：</dt>
-                    <dd>鲜花编号：9010811</dd>
-                </dl>
-                <dl>
-                    <dt>材料：</dt>
-                    <dd>10枝多头黄百合,黄莺适量搭配</dd>
-                </dl>
-                <dl>
-                    <dt>包装：</dt>
-                    <dd>蓝色平面纸圆形包装，拉菲草束扎</dd>
-                </dl>
-                <dl>
-                    <dt>花语：</dt>
-                    <dd>想着 我们曾一起跨过海边，<br/>想着 我们曾一起晒太阳。<br/>想着 我们曾一起坐着小火车,<br/>想着 我们曾手牵手走过曾经。<br/>此刻，我的心情，一如阳光般温暖！</dd>
-                </dl>
-                <dl>
-                    <dt>附送：</dt>
-                    <dd>下单填写留言，即免费赠送精美贺卡！</dd>
-                </dl>
-                <dl>
-                    <dt>配送</dt>
-                    <dd>全国大中城市</dd>
-                </dl>
-                <dl>
-                    <dt style="line-height: 25px;">配送至</dt>
-                    <dd style="line-height: 25px;">鲜花编号：9010811</dd>
-                </dl>
-                <dl>
-                    <dt>说明：</dt>
-                    <dd><span class="text_explain">特别花材,大城市请提前一天订购,中小城市请订购前咨询</span></dd>
-                </dl>
-            </div>
-            <div class="product_price">
-                <div class="price_original">市场价：￥435</div>
-                <div class="price_sell">花礼价：<strong><span class="price_sign_A">¥</span><span class="price_num_A">339</span></strong></div>
-            </div>
-            <div class="product_appzx">
-                <ul>
-                    <li>促销信息 ：<img src="../images/appzx_01.png"><strong><span class="price_sign_A">¥</span><span class="price_num_A">339</span></strong></li>
-                    <li class="hidden">
-                        <p><span class="app_dropdown"></span>去APP购买<img src="src/images/detail/xxjt.png" class="app_img"></p>
-                        <div class="app_ewm">
-                            <img src="../images/app_qrcode.jpg" style="width: 120px; height: 120px;" class="ewm_app_dis">
-                            新人专享100元大礼包
-                        </div>
-                    </li>
-                    <li class="hidden">
-                        <p><span class="app_dropdown"></span>去微信购买<img src="src/images/detail/xxjt.png" class="app_img"></p>
-                        <div class="app_ewm">
-                            <img src="../images/app_qrcode.jpg" style="width: 120px; height: 120px;" class="ewm_app_dis">
-                            新人专享100元大礼包
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="btn_buy">
-                <a href="javascript:;" class="im_buy"><span class="im"></span>立即购买</a>
-                <a href="javascript:;" class="future_buy"><span class="future"></span>收 藏</a>
-            </div>
-        </div>
-    </div>
+    <!-- 鲜花详情部分，在JS中体现 -->
+
 </div>
 
 
@@ -420,7 +343,231 @@
                     </div>
                 </div>
             </div>
+ <!-- 鲜花详情右边 -->
+    <div class="section_two_right">
+       <ul class="hd_move hd_move_one">
+           <li class="table_jump jump_A"><a href="javascript:;" id="a01">商品详情</a></li><li class="table_jump"><a href="#a02">用户评价</a></li><li class="table_jump"><a href="#a03">购物保障</a></li>
+       </ul>
+       <div class="section_hd_img">
+           <img src="../images/20151231102305772296.jpg" class="img_it"/>
+           <img src="../images/2011524185315745364.jpg" class="img_it">
+           <img src="../images/20115241853315269259.jpg" class="img_it img_it3"/>
+           <img src="../images/xianhua_cardstyle.jpg" class="img_it"/>
+       </div>
+       <ul class="hd_move">
+           <li class="table_jump"><a href="#a01">商品详情</a></li><li class="table_jump jump_A"><a href="javascript:;" id="a02">用户评价</a></li><li class="table_jump"><a href="#a03">购物保障</a></li>
+       </ul>
+       <div class="section_hd_img section_body_comment">
+           <div class="body_com_hd">
+            本商品评价<span>260</span>条，最近所有商品评价<span>244169</span>条<br/><br/><br/>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="src/images/detail/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="src/images/detail/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="src/images/detail/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="src/images/detail/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="src/images/detail/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="../images/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="src/images/detail/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_foot">
+            本商品评价<span>260</span>条 【<a href="javascript:;">查看本商品全部评价</a>】  【<a href="javascript:;">查看所有商品评价</a>】
+           </div>
+       </div>
+       <ul class="hd_move">
+           <li class="table_jump"><a href="#a01">商品详情</a></li><li class="table_jump"><a href="#a02">用户评价</a></li><li class="table_jump jump_A"><a href="javascript:;" id="a03">购物保障</a></li>
+       </ul>
+       <div class="section_hd_img shop_guarantee">
+           <ul class="guarantee_list">
+               <li class="guarantee_active"><a href="javascript:;"><span class="guarantee shopper_A"></span>13年品牌</a></li>
+               <li><a href="javascript:;"><span class="guarantee shopper_B"></span>销量第一</a></li>
+               <li><a href="javascript:;"><span class="guarantee shopper_C"></span>400万用户信赖</a></li>
+               <li><a href="javascript:;"><span class="guarantee shopper_D"></span>订单实拍</a></li>
+               <li><a href="javascript:;"><span class="guarantee shopper_E"></span>3小时配送</a></li>
+               <li><a href="javascript:;"><span class="guarantee shopper_F"></span>200%退赔承诺</a></li>
+           </ul>
+           <div class="img_Carousel">
+               <ul>
+                    <li class="back_move back_opacity"><a href="javascript:;"><img src="../images/server_01.jpg"></a></li>
+                    <li class="back_move"><a href="javascript:;"><img src="../images/server_02.jpg"></a></li>
+                    <li class="back_move"><a href="javascript:;"><img src="../images/server_03.jpg"></a></li>
+                    <li class="back_move"><a href="javascript:;"><img src="../images/server_04.jpg"></a></li>
+                    <li class="back_move"><a href="javascript:;"><img src="../images/server_05.jpg"></a></li>
+                    <li class="back_move"><a href="javascript:;"><img src="../images/server_06.jpg"></a></li>
+                    <p style="width: 930px; height: 350px; margin: 0 auto;"></p>
+                </ul>
+           </div>
+       </div>
+    </div>
+</div>
+
+<!-- 底部 -->
+
+ <!-- 尾部导航 -->
+        <div class="footer-nav">
+            <div class="footer-nav-cont">
+                <ul class="nav-cont-list">
+                    <li><a href="./index.html">首页</a></li>
+                    <li><a href="javascript:;">关于我们</a></li>
+                    <li><a href="javascript:;">媒体报道</a></li>
+                    <li><a href="javascript:;">联系方式</a></li>
+                    <li><a href="javascript:;">企业团购</a></li>
+                    <li><a href="javascript:;">花店加盟</a></li>
+                    <li><a href="javascript:;">友情链接</a></li>
+                    <li><a href="javascript:;">在线补款</a></li>
+                    <li class="last"><a href="javascript:;">为什么选择中国鲜花礼品网</a></li>
+                </ul>
+            </div>
         </div>
+<!-- common footer -->
+    <footer>
+        <div class="lasting">
+            <div class="auth">
+                <a href="javascript:;"><img src="../images/cxwz.png" class="auth-h"></a>
+                <a href="javascript:;"><img src="../images/cxwz.gif"></a>
+                <a href="javascript:;"><img src="../images/smyz.gif"></a>
+                <a href="javascript:;"><img src="../images/slogan.png"></a>
+                <a href="javascript:;"><img src="../images/zfb.gif"></a>
+                <a href="javascript:;"><img src="../images/100.jpg"></a>
+                <a href="javascript:;"><img src="../images/bico1.jpg"></a>
+                <a href="javascript:;"><img src="../images/bico4.jpg"></a>
+                <a href="javascript:;"><img src="../images/bico3.jpg"></a>
+            </div>
+            <p><a href="javascript:;" title="中国花卉协会会员">中国花卉协会会员</a> <a href="javascript:;">中国电子商务协会会员</a> ICP经营许可证：<a href="javascript:;">粤B2-20050744</a> <b>|</b> <a href="javascript:;">粤ICP备09171662号</a> <span class="ico-beian"></span>粤公网安备44030502000373号 Copyright © 2005-2018</p>
+            <p>花礼网 （中国鲜花礼品网） <a href="javascript:;">www.hua.com</a><span> 深圳市百易信息技术有限公司</span> 中国鲜花网领先品牌，鲜花速递专家！</p>
+        </div>
+    </footer>
+<!-- friendship -->
+    <div class="footer-link">
+        <ul class="link-list">
+            <h6>友链</h6>
+            <li><a href="javascript:;">中华取名网</a></li>
+            <li><a href="javascript:;">深圳房产网</a></li>
+            <li><a href="javascript:;">卷皮网</a></li>
+            <li><a href="javascript:;">腕表</a></li>
+            <li><a href="javascript:;">宝贝婚团网</a></li>
+            <li><a href="javascript:;">苗木</a></li>
+            <li><a href="javascript:;">佐卡伊珠宝网</a></li>
+            <li><a href="javascript:;">钻石婚戒定制</a></li>
+            <li><a href="javascript:;">杂志</a></li>
+            <li><a href="javascript:;">中国青少年艺术教育网</a></li>
+            <li><a href="javascript:;">装修网</a></li>
+            <li><a href="javascript:;">淘狗网</a></li>
+            <li><a href="javascript:;">礼无忧网</a></li>
+            <li><a href="javascript:;">宠物狗</a></li>
+            <li><a href="javascript:;">新友网</a></li>
+            <li><a href="javascript:;">礼物网</a></li>
+            <li><a href="javascript:;">装修</a></li>
+            <li><a href="javascript:;">新三板</a></li>
+            <li><a href="javascript:;">商标注册</a></li>
+            <li><a href="javascript:;" class="link-end">眼镜店</a></li>
+        </ul>
+    </div> 
 
 <body>
     
@@ -428,4 +575,4 @@
 </html>
    <script src="../../dist/js/jquery-1.10.1.min.js"></script>
    <script src="../../dist/js/common.js"></script>
-   <script src="../../dist/js/cart.js"></script>
+   <script src="../../dist/js/detail.js"></script>
